# online_judge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  docker-compose.yml  http_server  judge_server  online_judge.sln  runner_main  vcpkg.json
backend/src/: CMakeLists.txt
backend/src/application/: CMakeLists.txt  auth_command_action.cpp  create_submission_action.cpp  get_problem_detail_query.cpp  get_public_user_list_query.cpp  get_submission_detail_query.cpp  get_submission_history_query.cpp  get_submission_source_query.cpp  get_submission_status_batch_query.cpp  get_system_status_query.cpp  get_user_list_query.cpp  get_user_submission_ban_status_query.cpp  get_user_submission_statistics_query.cpp  get_user_summary_by_login_id_query.cpp  get_user_summary_query.cpp  list_problems_query.cpp  list_submissions_query.cpp  list_user_solved_problems_query.cpp  list_user_wrong_problems_query.cpp  problem_command_action.cpp  problem_content_query.cpp  problem_sample_action.cpp  replace_testcases_action.cpp  set_problem_limits_action.cpp  set_problem_statement_action.cpp  submission_command_action.cpp  testcase_action.cpp  testcase_query.cpp  user_command_action.cpp
backend/src/common/: CMakeLists.txt  blocking_io.cpp  crypto_util.cpp  db_connection.cpp  db_connection_pool.cpp  env_util.cpp  error_code.cpp  file_util.cpp  http_error.cpp  json_field_util.cpp  language_util.cpp  logger.cpp  password_util.cpp  query_param_util.cpp  repository_error.cpp  string_util.cpp  submission_status.cpp  temp_dir.cpp  temp_file.cpp  testcase_uploader.cpp  testcase_zip_service.cpp  token_util.cpp  unique_fd.cpp  worker_pool.cpp  zip_util.cpp
backend/src/db_event/: CMakeLists.txt  submission_event_listener.cpp
backend/src/db_repository/: CMakeLists.txt  auth_repository.cpp  db_repository.cpp  login_repository.cpp  problem_content_repository.cpp  problem_core_repository.cpp  problem_mutation_repository.cpp  problem_query_repository.cpp  problem_snapshot_repository.cpp  problem_statistics_repository.cpp  problem_version_repository.cpp  submission_finalize_repository.cpp  submission_queue_repository.cpp  submission_read_repository.cpp  submission_repository.cpp  testcase_mutation_repository.cpp  testcase_order_repository.cpp  testcase_query_repository.cpp  testcase_repository.cpp  user_problem_summary_repository.cpp  user_repository.cpp  user_statistics_repository.cpp
backend/src/db_service/: CMakeLists.txt  auth_service.cpp  login_service.cpp  problem_command_service.cpp  problem_content_service.cpp  problem_core_service.cpp  problem_query_service.cpp  problem_statistics_service.cpp  problem_version_publish_service.cpp  submission_command_service.cpp  submission_judge_service.cpp  submission_query_service.cpp  submission_service.cpp  system_service.cpp  testcase_bulk_mutation_service.cpp  testcase_item_mutation_service.cpp  testcase_mutation_publish_helper.cpp  testcase_mutation_service.cpp  testcase_query_service.cpp  testcase_service.cpp  user_service.cpp  user_statistics_service.cpp
backend/src/db_util/: CMakeLists.txt  auth_util.cpp  login_util.cpp  problem_core_util.cpp  problem_statistics_util.cpp  submission_util.cpp  testcase_util.cpp
backend/src/dto/: CMakeLists.txt  auth_dto.cpp  problem_content_dto.cpp  problem_dto.cpp  submission_dto.cpp  submission_internal_dto.cpp  submission_request_dto.cpp  submission_response_dto.cpp  user_dto.cpp  user_statistics_dto.cpp
backend/src/error/: CMakeLists.txt  auth_error.cpp  db_error.cpp  error_code.cpp  http_error.cpp  http_server_error.cpp  infra_error.cpp  io_error.cpp  io_error_bridge.cpp  judge_error.cpp  pool_error.cpp  problem_content_error.cpp  repository_error.cpp  request_error.cpp  sandbox_error.cpp  service_error.cpp  submission_error.cpp  submission_event_error.cpp  testcase_upload_error.cpp  transport_error.cpp  zip_error.cpp
backend/src/http_core/: CMakeLists.txt  acceptor.cpp  auth_guard.cpp  http_dispatcher.cpp  http_response_util.cpp  http_runtime_config.cpp  http_server.cpp  http_server_bootstrap.cpp  http_session.cpp  http_util.cpp  json_util.cpp  query_param_util.cpp  request_dto.cpp  request_list_filter_dto.cpp  request_observer.cpp  request_parser.cpp  testcase_uploader.cpp  testcase_util.cpp
backend/src/http_endpoint/: CMakeLists.txt
backend/src/http_guard/: CMakeLists.txt  auth_guard.cpp  problem_guard.cpp  submission_guard.cpp  testcase_upload_guard.cpp  user_guard.cpp
backend/src/http_handler/: CMakeLists.txt  auth_command_handler.cpp  auth_handler.cpp  problem_command_handler.cpp  problem_content_command_handler.cpp  problem_content_handler.cpp  problem_content_query_handler.cpp  problem_handler.cpp  problem_query_handler.cpp  submission_command_handler.cpp  submission_handler.cpp  submission_query_handler.cpp  system_handler.cpp  system_query_handler.cpp  testcase_bulk_command_handler.cpp  testcase_command_handler.cpp  testcase_handler.cpp  testcase_item_command_handler.cpp  testcase_move_command_handler.cpp  testcase_query_handler.cpp  user_command_handler.cpp  user_handler.cpp  user_list_query_handler.cpp  user_problem_list_query_handler.cpp  user_profile_query_handler.cpp  user_query_handler.cpp  user_statistics_query_handler.cpp  user_submission_ban_query_handler.cpp
backend/src/http_router/: CMakeLists.txt  auth_all_routes.cpp  auth_command_routes.cpp  auth_router.cpp  problem_all_routes.cpp  problem_command_routes.cpp  problem_query_routes.cpp  problem_router.cpp  submission_all_routes.cpp  submission_command_routes.cpp  submission_query_routes.cpp  submission_router.cpp  system_all_routes.cpp  system_db_routes.cpp  system_public_routes.cpp  system_router.cpp  testcase_routes.cpp  user_all_routes.cpp  user_command_routes.cpp  user_query_routes.cpp  user_router.cpp
backend/src/http_server/: CMakeLists.txt  http_response_util.cpp  http_server.cpp  http_util.cpp  json_util.cpp  testcase_util.cpp
backend/src/judge_core/: CMakeLists.txt  checker.cpp  judge_expectation_loader.cpp  judge_policy.cpp  (+14 more)
main/: CMakeLists.txt  db_server.cpp  http_server.cpp  judge_server.cpp
(+1050 files in other folders)
